--- a/style.css
+++ b/style.css
@@ -17,12 +17,14 @@
   color: #fff;
 }
 
-.body {
-  background-image: url("images/IMG_0596.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 100vw 100vh;
-  overflow: hidden;
+@media screen and (min-width: 768px) {
+  .body {
+    background-image: url("images/IMG_0596.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100vw 100vh;
+    overflow: hidden;
+  }
 }
 
 .flex-container {
