--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@
   font-family: "Fredoka", sans-serif;
 }
 
-.darkcolor {
+.dark-color {
   background-color: #0d0628;
 }
 
-.color3 {
+.light-color {
   color: #fca17d;
 }
 
