--- a/style.css
+++ b/style.css
@@ -17,9 +17,10 @@
   color: #fff;
 }
 
-.red {
+.error {
   color: red;
-  font-weight: bold;
+  text-align: center;
+  margin-top: 20px;
 }
 
 @media screen and (min-width: 768px) {
